--- a/css/class29.css
+++ b/css/class29.css
@@ -3,3 +3,24 @@
     margin: 0px;
     font-size: 20px;
 }
+.nev{
+    width: 396px;
+    height: 80px;
+    background-color: green;
+    margin: auto;
+}
+.nev ul{
+    
+}
+.nev ul li{
+    list-style: none;
+    margin: 20px;
+    float: right;
+}
+.nev ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    cursor: pointer;
+    
+}
